--- a/eca-net.ipynb
+++ b/eca-net.ipynb
@@ -52,6 +52,96 @@
     "        y = y.transpose(1, 2).unsqueeze(-1)  # [B, C, 1, 1]\n",
     "        return x * y.expand_as(x)        # 特征图加权"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-05-29T01:12:44.856Z"
+    },
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "# --------------------- 精简版ResNet50+ECA ---------------------\n",
+    "class ECABottleneck(nn.Module):\n",
+    "    expansion = 4  # 扩展系数从1改为4\n",
+    "\n",
+    "    def __init__(self, in_channels, out_channels, stride=1):\n",
+    "        super(ECABottleneck, self).__init__()\n",
+    "        # 1x1卷积降维\n",
+    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=1, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
+    "        \n",
+    "        # 3x3卷积\n",
+    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, \n",
+    "                               stride=stride, padding=1, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
+    "        \n",
+    "        # 1x1卷积升维\n",
+    "        self.conv3 = nn.Conv2d(out_channels, out_channels * self.expansion, \n",
+    "                               kernel_size=1, bias=False)\n",
+    "        self.bn3 = nn.BatchNorm2d(out_channels * self.expansion)\n",
+    "        \n",
+    "        # ECA模块放在最后一个卷积之后\n",
+    "        self.eca = ECALayer(out_channels * self.expansion)\n",
+    "\n",
+    "        # 捷径连接\n",
+    "        self.shortcut = nn.Sequential()\n",
+    "        if stride != 1 or in_channels != out_channels * self.expansion:\n",
+    "            self.shortcut = nn.Sequential(\n",
+    "                nn.Conv2d(in_channels, out_channels * self.expansion, \n",
+    "                          kernel_size=1, stride=stride, bias=False),\n",
+    "                nn.BatchNorm2d(out_channels * self.expansion)\n",
+    "            )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = torch.relu(self.bn1(self.conv1(x)))\n",
+    "        out = torch.relu(self.bn2(self.conv2(out)))\n",
+    "        out = self.bn3(self.conv3(out))\n",
+    "        out = self.eca(out)  # 应用ECA注意力\n",
+    "        out += self.shortcut(x)\n",
+    "        return torch.relu(out)\n",
+    "\n",
+    "class ECA_ResNet50(nn.Module):  \n",
+    "    def __init__(self, block, num_blocks, num_classes=10):\n",
+    "        super(ECA_ResNet50, self).__init__()\n",
+    "        self.in_channels = 64\n",
+    "        \n",
+    "        # 输入层\n",
+    "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm2d(64)\n",
+    "        \n",
+    "        # 四个阶段（层数更多，通道数更大）\n",
+    "        self.layer1 = self._make_layer(block, 64, num_blocks[0], stride=1)   # 输出256通道\n",
+    "        self.layer2 = self._make_layer(block, 128, num_blocks[1], stride=2)  # 输出512通道\n",
+    "        self.layer3 = self._make_layer(block, 256, num_blocks[2], stride=2)  # 输出1024通道\n",
+    "        self.layer4 = self._make_layer(block, 512, num_blocks[3], stride=2)  # 输出2048通道\n",
+    "        \n",
+    "        # 输出层\n",
+    "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
+    "        self.fc = nn.Linear(512 * block.expansion, num_classes)  # 512*4=2048\n",
+    "\n",
+    "    def _make_layer(self, block, out_channels, num_blocks, stride):\n",
+    "        strides = [stride] + [1] * (num_blocks - 1)\n",
+    "        layers = []\n",
+    "        for stride in strides:\n",
+    "            layers.append(block(self.in_channels, out_channels, stride))\n",
+    "            self.in_channels = out_channels * block.expansion\n",
+    "        return nn.Sequential(*layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.bn1(self.conv1(x)))\n",
+    "        x = self.layer1(x)\n",
+    "        x = self.layer2(x)\n",
+    "        x = self.layer3(x)\n",
+    "        x = self.layer4(x)\n",
+    "        x = self.avgpool(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.fc(x)\n",
+    "        return x\n"
+   ]
   }
  ],
  "metadata": {
