第三次提交

--- a/eca-net.ipynb
+++ b/eca-net.ipynb
@@ -142,6 +142,59 @@
     "        x = self.fc(x)\n",
     "        return x\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --------------------- 训练与验证代码 ---------------------\n",
+    "def train(model, device, train_loader, optimizer, criterion, epoch):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    \n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = criterion(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        total_loss += loss.item()\n",
+    "        _, predicted = output.max(1)\n",
+    "        total += target.size(0)\n",
+    "        correct += predicted.eq(target).sum().item()\n",
+    "        \n",
+    "        if batch_idx % 100 == 0:\n",
+    "            print(f'Epoch: {epoch} [{batch_idx * len(data)}/{len(train_loader.dataset)} '\n",
+    "                  f'({100. * batch_idx / len(train_loader):.0f}%)]\\tLoss: {loss.item():.6f}')\n",
+    "    \n",
+    "    train_loss = total_loss / len(train_loader)\n",
+    "    train_acc = 100. * correct / total\n",
+    "    print(f'Train set: Average loss: {train_loss:.4f}, Accuracy: {train_acc:.2f}%')\n",
+    "    return train_loss, train_acc\n",
+    "\n",
+    "def test(model, device, test_loader, criterion):\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    correct = 0\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            data, target = data.to(device), target.to(device)\n",
+    "            output = model(data)\n",
+    "            test_loss += criterion(output, target).item()\n",
+    "            pred = output.argmax(dim=1, keepdim=True)\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "    \n",
+    "    test_loss /= len(test_loader)\n",
+    "    acc = 100. * correct / len(test_loader.dataset)\n",
+    "    print(f'Test set: Average loss: {test_loss:.4f}, Accuracy: {correct}/{len(test_loader.dataset)} ({acc:.2f}%)')\n",
+    "    return test_loss, acc\n"
+   ]
   }
  ],
  "metadata": {
