第四次提交

--- a/eca-net.ipynb
+++ b/eca-net.ipynb
@@ -18,7 +18,8 @@
     "import torch.optim as optim\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
-    "import math"
+    "import math\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -105,23 +106,17 @@
     "        return torch.relu(out)\n",
     "\n",
     "class ECA_ResNet50(nn.Module):  \n",
-    "    def __init__(self, block, num_blocks, num_classes=10):\n",
+    "    def __init__(self, block, num_blocks, num_classes=100):  \n",
     "        super(ECA_ResNet50, self).__init__()\n",
     "        self.in_channels = 64\n",
-    "        \n",
-    "        # 输入层\n",
     "        self.conv1 = nn.Conv2d(3, 64, kernel_size=3, stride=1, padding=1, bias=False)\n",
     "        self.bn1 = nn.BatchNorm2d(64)\n",
-    "        \n",
-    "        # 四个阶段（层数更多，通道数更大）\n",
-    "        self.layer1 = self._make_layer(block, 64, num_blocks[0], stride=1)   # 输出256通道\n",
-    "        self.layer2 = self._make_layer(block, 128, num_blocks[1], stride=2)  # 输出512通道\n",
-    "        self.layer3 = self._make_layer(block, 256, num_blocks[2], stride=2)  # 输出1024通道\n",
-    "        self.layer4 = self._make_layer(block, 512, num_blocks[3], stride=2)  # 输出2048通道\n",
-    "        \n",
-    "        # 输出层\n",
+    "        self.layer1 = self._make_layer(block, 64, num_blocks[0], stride=1)\n",
+    "        self.layer2 = self._make_layer(block, 128, num_blocks[1], stride=2)\n",
+    "        self.layer3 = self._make_layer(block, 256, num_blocks[2], stride=2)\n",
+    "        self.layer4 = self._make_layer(block, 512, num_blocks[3], stride=2)\n",
     "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
-    "        self.fc = nn.Linear(512 * block.expansion, num_classes)  # 512*4=2048\n",
+    "        self.fc = nn.Linear(512 * block.expansion, num_classes)  \n",
     "\n",
     "    def _make_layer(self, block, out_channels, num_blocks, stride):\n",
     "        strides = [stride] + [1] * (num_blocks - 1)\n",
@@ -146,7 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-05-29T01:12:44.856Z"
+    },
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "# --------------------- 训练与验证代码 ---------------------\n",
@@ -155,7 +155,7 @@
     "    total_loss = 0\n",
     "    correct = 0\n",
     "    total = 0\n",
-    "    \n",
+    "\n",
     "    for batch_idx, (data, target) in enumerate(train_loader):\n",
     "        data, target = data.to(device), target.to(device)\n",
     "        optimizer.zero_grad()\n",
@@ -194,6 +194,144 @@
     "    acc = 100. * correct / len(test_loader.dataset)\n",
     "    print(f'Test set: Average loss: {test_loss:.4f}, Accuracy: {correct}/{len(test_loader.dataset)} ({acc:.2f}%)')\n",
     "    return test_loss, acc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-05-29T01:12:44.856Z"
+    },
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "# --------------------- 主函数 ---------------------\n",
+    "if __name__ == '__main__':\n",
+    "    # 超参数设置\n",
+    "    batch_size = 128\n",
+    "    epochs = 100\n",
+    "    lr = 0.1\n",
+    "    num_classes = 100  \n",
+    "    \n",
+    "    # 数据预处理\n",
+    "    transform_train = transforms.Compose([\n",
+    "        transforms.RandomCrop(32, padding=4),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761)),\n",
+    "    ])\n",
+    "\n",
+    "    transform_test = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761)),\n",
+    "    ])\n",
+    "\n",
+    "    # 加载数据集\n",
+    "    train_set = torchvision.datasets.CIFAR100(root='./data', train=True, download=True, transform=transform_train)\n",
+    "    test_set = torchvision.datasets.CIFAR100(root='./data', train=False, download=True, transform=transform_test)\n",
+    "    \n",
+    "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=2)\n",
+    "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=100, shuffle=False, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-05-29T01:12:44.856Z"
+    },
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "    # 初始化模型（改为ResNet50）\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    \n",
+    "    # 使用ResNet50结构：[3, 4, 6, 3]个块\n",
+    "    model = ECA_ResNet50(ECABottleneck, [3, 4, 6, 3], num_classes=num_classes).to(device)\n",
+    "    \n",
+    "    # 打印模型参数数量\n",
+    "    total_params = sum(p.numel() for p in model.parameters())\n",
+    "    print(f\"模型总参数: {total_params/1e6:.2f}M\")\n",
+    "    \n",
+    "    # 优化器和学习率调度\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=0.9, weight_decay=5e-4)\n",
+    "    scheduler = optim.lr_scheduler.MultiStepLR(optimizer, milestones=[30, 60, 90], gamma=0.1)\n",
+    "    criterion = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "execution_failed": "2025-05-29T01:12:44.856Z"
+    },
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "    # 训练循环\n",
+    "    best_acc = 0.0\n",
+    "    history = {'train_loss': [], 'train_acc': [], 'test_loss': [], 'test_acc': []}\n",
+    "\n",
+    "\n",
+    "    for epoch in range(1, epochs + 1):\n",
+    "        train_loss, train_acc = train(model, device, train_loader, optimizer, criterion, epoch)\n",
+    "        test_loss, test_acc = test(model, device, test_loader, criterion)\n",
+    "        scheduler.step()\n",
+    "        \n",
+    "        # 记录历史数据\n",
+    "        history['train_loss'].append(train_loss)\n",
+    "        history['train_acc'].append(train_acc)\n",
+    "        history['test_loss'].append(test_loss)\n",
+    "        history['test_acc'].append(test_acc)\n",
+    "        \n",
+    "        if test_acc > best_acc:\n",
+    "            best_acc = test_acc\n",
+    "            torch.save({\n",
+    "                'epoch': epoch,\n",
+    "                'model_state_dict': model.state_dict(),\n",
+    "                'optimizer_state_dict': optimizer.state_dict(),\n",
+    "                'accuracy': test_acc,\n",
+    "            }, 'eca_resnet50_cifar100.pth')\n",
+    "        \n",
+    "        print(f'Epoch {epoch}/{epochs} | '\n",
+    "              f'LR: {scheduler.get_last_lr()[0]:.5f} | '\n",
+    "              f'Best Acc: {best_acc:.2f}%')\n",
+    "    \n",
+    "    print(f\"训练完成，最高测试准确率: {best_acc:.2f}%\")\n",
+    "    \n",
+    "    # 保存最终模型\n",
+    "    torch.save(model.state_dict(), 'eca_resnet50_final_cifar100.pth')\n",
+    "    # 绘制准确率曲线\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.plot(history['train_acc'], label='Train Acc')\n",
+    "    plt.plot(history['test_acc'], label='Test Acc')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('Accuracy (%)')\n",
+    "    plt.title('Accuracy Curve')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    # 绘制损失曲线\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.plot(history['train_loss'], label='Train Loss')\n",
+    "    plt.plot(history['test_loss'], label='Test Loss')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.title('Loss Curve')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "    # 保存图像\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig('eca_resnet50_training_curves.png')  # 保存为PNG图像\n",
+    "    plt.show()  "
    ]
   }
  ],
